page h2 and content spacing fix

--- a/client/src/components/Frame/index.css
+++ b/client/src/components/Frame/index.css
@@ -17,7 +17,7 @@ h2 {
     color: var(--secondary-color);
     font-weight: 300;
     text-align: center;
-    margin-bottom: .8rem;
+    margin: 0;
 }
 
 @media (min-width: 1200px) {
